<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.globalmentor</groupId>
		<artifactId>globalmentor-opensource-parent</artifactId>
		<version>8.6.0</version>
	</parent>

	<artifactId>globalmentor-web-parent</artifactId>
	<version>0.6.6-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>GlobalMentor Web Parent</name>
	<description>(X/HT)ML, CSS, and JavaScript format definitions, implementations, and utilities.</description>
	<url>http://www.globalmentor.com/software/</url>
	<inceptionYear>1996</inceptionYear>

	<scm>
		<connection>scm:git:https://bitbucket.org/globalmentor/globalmentor-web.git</connection>
		<developerConnection>scm:git:https://bitbucket.org/globalmentor/globalmentor-web.git</developerConnection>
		<url>https://bitbucket.org/globalmentor/globalmentor-web</url>
	</scm>

	<properties>
		<maven.compiler.release>11</maven.compiler.release>
	</properties>

	<modules>
		<module>css</module>
		<module>css-spec</module>
		<module>html</module>
		<module>html-spec</module>
		<module>mathml-spec</module>
		<module>javascript</module>
		<module>svg-spec</module>
		<module>vocab</module>
		<module>vocab-dcmi</module>
		<module>vocab-foaf</module>
		<module>vocab-ogp</module>
		<module>xml</module>
		<module>xml-dom-impl</module>
		<module>xml-spec</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-css</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-css-spec</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-html-spec</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-mathml-spec</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-svg-spec</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-vocab</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-xml</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-xml-spec</artifactId>
				<version>0.6.6-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
